--- a/index.html
+++ b/index.html
@@ -5,9 +5,32 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.waves.min.js"></script>
   </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+  <body onload="backround()">
+    <div id="vanta">
+      <div id="app"></div>
+      <script type="module" src="/src/main.js"></script>
+    </div>
+    <script>
+      function backround(){
+        VANTA.WAVES({
+          el: "#vanta",
+          mouseControls: true,
+          touchControls: true,
+          gyroControls: false,
+          minHeight: 200.00,
+          minWidth: 200.00,
+          scale: 1.00,
+          scaleMobile: 1.00,
+          color: 0x0,
+          shininess: 31.00,
+          waveHeight: 20.00,
+          waveSpeed: 1.25,
+          zoom: 0.83
+        });
+      }
+    </script>
   </body>
 </html>
