--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.waves.min.js"></script>
   </head>
-  <body onload="backround()">
-    <div id="vanta">
-      <div id="app"></div>
-      <script type="module" src="/src/main.js"></script>
-    </div>
+  <body id="vanta" onload="backround()">
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
     <script>
       function backround(){
         VANTA.WAVES({
