--- a/index.html
+++ b/index.html
@@ -2,33 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
+    <!--<link rel="stylesheet" href="/bootstrap-5.2.2/bootstrap-5.2.2-dist/css/bootstrap.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />-->
     <title>Vite App</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.waves.min.js"></script>
   </head>
-  <body id="vanta" onload="backround()">
+  <body style="margin: 0%">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-    <script>
-      function backround(){
-        VANTA.WAVES({
-          el: "#vanta",
-          mouseControls: true,
-          touchControls: true,
-          gyroControls: false,
-          minHeight: 200.00,
-          minWidth: 200.00,
-          scale: 1.00,
-          scaleMobile: 1.00,
-          color: 0x0,
-          shininess: 31.00,
-          waveHeight: 20.00,
-          waveSpeed: 1.25,
-          zoom: 0.83
-        });
-      }
-    </script>
   </body>
 </html>
